--- a/serial.template
+++ b/serial.template
@@ -1,6 +1,6 @@
 #!/bin/sh
 #PBS -V
-#PBS -N serial_job
+#PBS -N {{ name }}
 #PBS -q normal
 #PBS -A etc
 #PBS -l select=1:ncpus=1:mpiprocs=1:ompthreads=1
