Fixed isseus with docker setup

--- a/gmsim_docker.yaml
+++ b/gmsim_docker.yaml
@@ -3,9 +3,9 @@ sim_root_dir: /home/quakekorea/QuakeData/RunFolder/Pohang_20220422
 fault_name: Pohang
 source_data:  /home/quakekorea/QuakeData/Busan_Data/Sources/Pohang
 copy_source_data: False
-vm_data: /home/quakekorea/QuakeData/Busan_Data/VMs/Busan_h1000
+vm_data: /home/quakekorea/QuakeData/Busan_Data/VMs/sample_vm_h1.0
 copy_vm_data: False
 gmsim_template: /home/quakekorea/QuakeData/gmsim_templates/Pohang_sdrop50_h1.0
-stat_file: /home/quakekorea/QuakeData/Busan_Data/Stations/Busan_2km_20220420.ll
+stat_file: /home/quakekorea/QuakeData/Busan_Data/Stations/Busan_2km.ll
 n_max_retries: 2
 # fault_list file is auto-generated
