--- a/Source/source.yaml
+++ b/Source/source.yaml
@@ -16,5 +16,5 @@ DIP: 69
 RAK: 152
 # # rupture timestep
 DT: 0.01
-VELOCITY_MODEL: "/home01/x2319a02/gmsim/VelocityModel/Mod-1D/kr_gb_kim2011_modified.1d"
-SOURCE_DATA_DIR: "/scratch/x2319a02/gmsim/Busan_Data/Data/Sources/Pohang_v2022_3" 
+VELOCITY_MODEL: "$QUAKECW/Source/kr_gb_kim2011_modified.1d"
+SOURCE_DATA_DIR: "$QUAKCW/Runs/Pohang/Source" 
