--- a/serial.template
+++ b/serial.template
@@ -2,9 +2,10 @@
 #PBS -V
 #PBS -N {{ name }}
 #PBS -q normal
-#PBS -A etc
+#PBS -A inhouse
 #PBS -l select=1:ncpus=1:mpiprocs=1:ompthreads=1
 #PBS -l walltime=01:00:00
+#PBS -W sandbox=PRIVATE
 
 cd $PBS_O_WORKDIR
 
